[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "astro-ascendant"
version = "0.1.2"
description = "Vedic Astrology Calculation Library"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "vedicastro",
    "pyswisseph",
]

[project.optional-dependencies]
test = [
    "pytest",
    "prettytable",
]

[project.urls]
Homepage = "https://github.com/thaletto/ascendant"

[tool.setuptools.packages.find]
include = ["ascendant*", "flatlib*"]
